--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "leg/googlecharts-bundle",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"type": "symfony-bundle",
 	"description": "Symfony2 bundle that intregrate LegGCharts, a PHP 5.3 library to generate charts using GoogleChartsImage",
 	"keywords": ["charts", "generation", "bundle", "image", "google"],
@@ -14,12 +14,13 @@
 	],
 	"require": {
 		"php": ">=5.3.2",
+		"ext-simplexml": "*",
 		"leg/googlecharts": "1.*@dev",
-		"symfony/framework-bundle": "~2.1",
-		"symfony/security-bundle": "~2.1"
+		"symfony/framework-bundle": "^2.8|^3.0",
+		"symfony/security-bundle": "^2.8|^3.0"
 	},
 	"require-dev": {
-		"twig/twig": "~1.5"
+		"twig/twig": "~1.5|^2.0|^3.0"
 	},
 	"autoload": {
 		"psr-0" : {
